--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,22 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+    {
+        "type": "node",
+        "request": "attach",
+        "localRoot": "${workspaceFolder}/docker/migration",
+        "name": "Attach migration",
+        "port": 9223,
+        "remoteRoot": "/service",
+        "skipFiles": [
+            "<node_internals>/**"
+        ],
+        "sourceMaps": true,
+        "smartStep": true,
+        "sourceMapPathOverrides": {
+            "/service/*": "${workspaceFolder}/docker/migration/*"
+        }
+    },
         {
             "type": "node",
             "request": "attach",
