--- a/docker/migration/package.json
+++ b/docker/migration/package.json
@@ -1,27 +1,28 @@
 {
     "devDependencies": {
-        "@types/amqplib": "^0.5.11",
-        "@types/jest": "^24.0.11",
-        "@types/node": "^11.13.0",
-        "@types/pg": "^7.4.14",
-        "@types/redis": "^2.8.12",
-        "jest": "^24.7.0",
-        "ts-jest": "^24.0.1"
+        "@types/amqplib": "^0.5.13",
+        "@types/jest": "^24.0.23",
+        "@types/node": "^10.17.5",
+        "@types/pg": "^7.11.2",
+        "@types/redis": "^2.8.14",
+        "jest": "^24.9.0",
+        "ts-jest": "^24.2.0"
     },
     "dependencies": {
-        "amqplib": "^0.5.3",
-        "pg": "^7.9.0",
+        "amqplib": "^0.5.5",
+        "pg": "^7.14.0",
         "redis": "^2.8.0",
-        "tslib": "^1.9.3",
-        "ts-node": "^8.0.3",
-        "typescript": "^3.4.1"
+        "tslib": "^1.10.0",
+        "ts-node-dev": "1.0.0-pre.43",
+        "typescript": "^3.7.3"
     },
     "license": "BSD-3-Clause",
     "name": "docker-app-migration",
     "private": true,
     "scripts": {
         "build": "tsc -p tsconfig.build.json",
-        "start": "ts-node runner.js"
+        "dev": "ts-node-dev --inspect-brk=0.0.0.0:9229 --ignore-watch node_modules -- src/runner.ts",
+        "start": "ts-node-dev --ignore-watch node_modules -- src/runner.ts"
     },
     "version": "1.0.1"
 }
